--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="profile col-md-6 text-center border-right">
     <h1 class="border-bottom">Profile</h1>
      <h3 class="py-3 px-0">三澤 弘享</h3>
-     <img src="img/hiroyuki.JPG" class="w-50 rounded-circle">
+     <img src="hiroyuki.JPG" class="w-50 rounded-circle">
     
      <h4 class="job py-2">-職業-</h4>
        <p>人材派遣ベンチャー/営業 兼 マネージャー</p>
