--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
 
     <div class="muf col-12 col-md-4 text-center">
       <a href="https://drive.google.com/file/d/13YW6HmBmiOdzM2z_Er_l2RRlDNMkJcEI/view?usp=sharing">
-        <img src="img/screen1.png" class=" w-30 "></a>
+        <img src="screen1.png" class=" w-30 "></a>
    </div>
 
    <div class="muf col-12 col-md-4 text-center">
        <a href="https://drive.google.com/file/d/1hhE1bx5v5w6h4BI8UJHN0fUvbiGeX6sM/view?usp=sharing">
-        <img src="img/screen2.png" class="w-30"></a>
+        <img src="screen2.png" class="w-30"></a>
     </div>
 
     <div class="muf col-12 col-md-4 text-center">
        <a href="https://drive.google.com/file/d/17c0x-Ixa-J0RqJ8fQdxEoViE59NPLjeI/view?usp=sharing">
-        <img src="img/screen3.png" class="w-30 "></a>
+        <img src="screen3.png" class="w-30 "></a>
     </div>
 
    </div>
