--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
     <title>Hiroyuki</title>
+    　<base href="{{site.github.url}}" charset="utf-8"/>
+
+
     
   </head>
   <body class="text-center">
