--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://hiro-1211.github.io/hiroyuki/stylesheet.css">
+    <link rel="stylesheet" href="https://hiro-1211.github.io/hiroyuki/style.css"/>
 
     <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- BootstrapのJS読み込み -->
 <script src="js/bootstrap.min.js"></script>
 
-<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="https://hiro-1211.github.io/hiroyuki/stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="https://hiro-1211.github.io/hiroyuki/style.css"/>
 
     <title>Hiroyuki</title>
     　<base href="{{site.github.url}}" charset="utf-8"/>
