--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
 <div class="service py-5" id="service-form">
-  <div class="service-section text-light mx-auto">
+  <div class="service-section mx-auto">
 <h1 class="">SERVICE</h1>
 <div class="service-row row mx-auto w-75">
   <div class="services col-12 col-md-6 text-center py-5">
