--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 
  
-<div class="bg-light py-5 text-secondary" id="contact-form">
+<div class="bg-light py-5 text-secondary　contact-section" id="contact-form">
   <h3 class="section-title pb-5">お問い合わせ</h3>
   <p>名前（フリガナ）</p>
   <input class="contact-submit" type="text" name="name"/>
