--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <p>メールアドレス</p>
   <input class="contact-submit" type="text" name="email"/>
   
-  <p>お問い合わせ内容</p>
+  <p>お問い合わせ内容テスト</p>
   <textarea></textarea>
   <br>
  <input class="contact-button" type="submit" value="送信"/>
